# wyag

./: .clang-format  .gitignore  CMakeLists.txt  README.org  vcpkg.json
cmake/: AssureOutOfSourceBuilds.cmake  packages.cmake
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  cli.cpp  cli.hpp  config.cpp  config.hpp  error.hpp  libwyag.cpp  libwyag.hpp  main.cpp  object.cpp  object.hpp  repo.cpp  repo.hpp  util.hpp
test/: CMakeLists.txt  cli_utest.cpp  object_utest.cpp  repo_utest.cpp
